fix responsive styles for new hearder link

--- a/client/style/globals/responsive.import.less
+++ b/client/style/globals/responsive.import.less
@@ -2,7 +2,7 @@ header .navbar-header .right-drawer-toggle{
     display: none !important;
 }
 
-@media screen and (max-width: 1275px) {
+@media screen and (max-width: 1350px) {
 	.module.museum-widget-handle {
 		display:none;
 	}
@@ -37,10 +37,13 @@ header .navbar-header .right-drawer-toggle{
 	}
 }
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1020px) {
   header .navbar-collapse.collapse.module-group.right {
     display:none !important;
   }
+}
+
+@media screen and (max-width: 1000px) {
 
   header .navbar-header .right-drawer-toggle{
     display: inline-block !important;
