update packages, reorganize methods, import layouts for main router

--- a/imports/ui/components/user/account.import.less
+++ b/imports/ui/components/user/account.import.less
@@ -125,8 +125,8 @@
   .form-save-help {
     text-align: center !important;
     margin: 0 auto !important;
-    font-family: @font-commentary;
-    color: @secondary-text;
+    font-family: @font-reading;
+    color: @text-secondary;
     font-size: 16px;
     display: block;
   }
@@ -142,7 +142,7 @@
   width: 100%;
   max-width: 320px;
   height: 4px;
-  background: @divider-color;
+  background: @divider;
 
 }
 
@@ -158,13 +158,13 @@
     float: left;
     clear: both;
     font-size: 14px;
-    color: @primary;
+    color: @md-primary;
     text-transform: uppercase;
     font-weight: bold;
     margin: 0 0 5px 0;
 
     .required-indicator {
-      color: @accent;
+      color: @md-accent;
     }
 
   }
