fix twitter imports and other errors related to updates

--- a/client/style/globals/global.import.less
+++ b/client/style/globals/global.import.less
@@ -196,7 +196,19 @@ section.parallax > .background-image-holder.blur {
 }
 .page-head {
   height:400px;
+	h1 {
+		font-size: 54px;
+	}
+	h2 {
+		font-size: 24px;
+	}
 }
+
+.page-content {
+
+}
+
+
 
 .layout > div{
   width:100%;
