--- a/client/style/main.less
+++ b/client/style/main.less
@@ -33,6 +33,8 @@
 @import "/imports/ui/components/ipads/ipads.import.less";
 @import "/imports/ui/components/user/account.import.less";
 @import "/imports/ui/components/user/users.import.less";
+@import "/imports/ui/components/pages/Listen/listen.import.less";
+@import "/imports/ui/components/pages/Watch/watch.import.less";
 
 /* Shared views */
 @import "/imports/ui/components/common/Viewer/viewer.import.less";
