fixes for imports in search tools and catalog

--- a/imports/ui/components/objects/objects.import.less
+++ b/imports/ui/components/objects/objects.import.less
@@ -99,6 +99,14 @@
 .object-teaser {
   padding: 1%;
 
+	hr {
+		margin: 15px 0 5px;
+		max-width: 180px;
+		background: rgba(255, 255, 255, 0.4);
+		height: 3px;
+		border: none;
+	}
+
   .object-teaser-wrap {
     display:block;
     vertical-align: top;
