--- a/imports/ui/components/objects/objects-search-tools.import.less
+++ b/imports/ui/components/objects/objects-search-tools.import.less
@@ -523,6 +523,9 @@
 	.irs-min, .irs-max {
 		color:@light;
 	}
+	.irs-line-mid, .irs-line-left, .irs-line-right, .irs-bar, .irs-bar-edge, .irs-slider {
+		// background: url('/images/sprite-skin-flat.png') repeat-x;
+	}
 }
 
 
