--- a/client/style/main.less
+++ b/client/style/main.less
@@ -30,6 +30,7 @@
 @import "/imports/ui/components/objects/objects-search-tools.import.less";
 @import "/imports/ui/components/objects/catalog.import.less";
 @import "/imports/ui/components/objects/viewer.import.less";
+@import "/imports/ui/components/objects/Pagination/pagination.import.less";
 @import "/imports/ui/components/ipads/ipads.import.less";
 @import "/imports/ui/components/user/account.import.less";
 @import "/imports/ui/components/user/users.import.less";
