--- a/imports/ui/components/objects/Pagination/pagination.import.less
+++ b/imports/ui/components/objects/Pagination/pagination.import.less
@@ -10,8 +10,9 @@
 	display: inline-block;
 	vertical-align: top;
 	cursor: pointer;
-	margin: 5px 10px;
+	margin: 10px;
 	border: 2px solid #eee;
+	padding: 5px 15px;
 
 	.transition(all 100ms ease-in-out);
 
@@ -31,9 +32,16 @@
 	}
 
 	span {
-		display: block;
-		padding: 5px 15px;
+		display: inline-block;
+		vertical-align: top;
 		font-family: @font-label;
+	}
+	i {
+		display: inline-block;
+		vertical-align: top;
+		padding-top: 7px;
+		line-height: 10px;
+
 	}
 
 }
