--- a/imports/ui/components/objects/objects.import.less
+++ b/imports/ui/components/objects/objects.import.less
@@ -136,7 +136,7 @@
     position:relative;
     height:240px;
 		overflow:hidden;
-		background:@dark-theme-ipad-3;
+		background-color: #eee;
 
 		.object-catalog-n {
 			position:absolute;
@@ -180,7 +180,7 @@
 			background-position:center;
 
 			&.default {
-				opacity:0.95;
+				opacity:0.7;
 				object-fit:normal;
 				.blur(2px);
 			}
@@ -198,7 +198,7 @@
 			.transition(all 300ms ease-out);
 
 			&.default-image-text-visible {
-				opacity:0.3;
+				opacity:0.5;
 			}
 
 			span {
@@ -295,6 +295,7 @@
 }
 
 .object-details-page {
+	padding-top: 70px;
 	.object-details {
 		padding:120px 0;
 	}
@@ -518,6 +519,13 @@
 
 		.object-thumbnail-wrap {
 			height:150px;
+
+			.default-image-text.default-image-text-visible {
+				padding: 80px 10px 0;
+				span {
+					font-size: 16px;
+				}
+			}
 		}
 
 		.object-text-wrap {
@@ -529,6 +537,10 @@
 
 			p {
 				display:none;
+			}
+
+			hr {
+				display: none;
 			}
 
 		}
