--- a/imports/ui/components/objects/objects.import.less
+++ b/imports/ui/components/objects/objects.import.less
@@ -452,7 +452,14 @@
 
 	}
 
+}
 
+.object-detail-media {
+	padding: 5px 5px 15px;
+	.media-title {
+		display:block;
+		padding: 0 0 5px;
+	}
 }
 
 .object-detail-viewer {
@@ -730,4 +737,8 @@
 
 .load-more-wrap {
   padding:30px 0 60px;
+}
+
+.mirador-container .window-manifest-title {
+	line-height: 1.3em;
 }
