--- a/imports/ui/components/objects/objects.import.less
+++ b/imports/ui/components/objects/objects.import.less
@@ -6,18 +6,13 @@
 	min-height:900px;
 
 }
+
 .objects-container {
 	margin:0 auto;
 	padding:30px 0 120px;
+	min-height:900px;
 	width:90%;
 	text-align:center;
-  //opacity:0;
-
-  &.component-mounted{
-    //opacity:1;
-
-  }
-
 
 	&.objects-container--list {
 
