fix some search tool styles and moving between index and catalog page

--- a/imports/ui/components/objects/objects-search-tools.import.less
+++ b/imports/ui/components/objects/objects-search-tools.import.less
@@ -249,6 +249,7 @@
 			font-weight:normal !important;
 			color:@light !important;
 			margin-top:5px !important;
+			-webkit-text-fill-color: @light !important;
 
 		}
 
