fix two mirador styles

--- a/imports/ui/components/objects/viewer.import.less
+++ b/imports/ui/components/objects/viewer.import.less
@@ -321,3 +321,12 @@
 	}
 
 }
+
+.manifest-info .book-option {
+	display: none !important;
+	visibility: hidden !important;
+}
+
+.mirador-btn.mirador-icon-view-type {
+	margin-top: 4px;
+}
