--- a/client/style/globals/global.import.less
+++ b/client/style/globals/global.import.less
@@ -238,3 +238,32 @@ html .mirador-osd {
 ::-moz-selection {
   background: @md-primary-100;
 }
+
+.catalogIndexDescription {
+	max-width: 720px;
+	display: block;
+	padding: 0;
+	margin: 0 auto;
+
+	p {
+		color: @light;
+		font-size: 20px;
+		font-weight: 100;
+		font-family: @font-reading;
+		padding: 60px 0 20px;
+		margin: 0 auto;
+		max-width: 720px;
+		display: block;
+		vertical-align: top;
+	}
+
+
+	a {
+		font-size: 18px;
+		color: @md-primary-100;
+		&:hover {
+			color: @md-primary-50;
+
+		}
+	}
+}
