update listen page content

--- a/client/style/globals/global.import.less
+++ b/client/style/globals/global.import.less
@@ -198,6 +198,7 @@ section.parallax > .background-image-holder.blur {
   height:400px;
 	h1 {
 		font-size: 54px;
+		line-height: 1.3em;
 	}
 	h2 {
 		font-size: 24px;
