--- a/imports/ui/components/pages/Listen/listen.import.less
+++ b/imports/ui/components/pages/Listen/listen.import.less
@@ -8,7 +8,7 @@
 
 .audio-object {
 	width: 100%;
-	margin: 20px;
+	margin: 20px auto;
 	hr {
 		max-width: 200px;
 		height: 3px;
@@ -17,11 +17,26 @@
 		margin:10px auto;
 
 	}
-	video {
+	img {
+		margin: 15px auto;
+		width: 95%;
+		max-width: 320px;
+		display: block;
+	}
+	.image-caption {
+		display:block;
+		vertical-align: top;
+		padding: 10px;
+		text-align: left;
+		max-width: 320px;
+		margin: 0 auto;
+	}
+	audio {
 		width: 100%;
-		margin:20px auto;
+		margin:0px auto 10px;
+		padding-bottom: 10px;
 		display:inline-block;
-		background: #000;
+		background: transparent;
 	}
 	.description {
 		padding: 25px 5px;
