fix a few more styles on listen page

--- a/imports/ui/components/pages/Listen/listen.import.less
+++ b/imports/ui/components/pages/Listen/listen.import.less
@@ -9,16 +9,18 @@
 .audio-object {
 	width: 100%;
 	margin: 20px auto;
+	padding: 40px 0;
+	display: block;
 	hr {
 		max-width: 200px;
 		height: 3px;
 		background: @divider;
 		border: none;
-		margin:10px auto;
+		margin:10px auto 30px;
 
 	}
 	img {
-		margin: 15px auto;
+		margin: 15px auto 0;
 		width: 95%;
 		max-width: 320px;
 		display: block;
@@ -26,14 +28,19 @@
 	.image-caption {
 		display:block;
 		vertical-align: top;
-		padding: 10px;
+		padding: 10px 20px;
 		text-align: left;
 		max-width: 320px;
 		margin: 0 auto;
+		font-family: @font-label;
+		font-weight: bold;
+		font-size: 14px;
+		background: #eee;
+		color: #444;
 	}
 	audio {
 		width: 100%;
-		margin:0px auto 10px;
+		margin:10px auto 30px;
 		padding-bottom: 10px;
 		display:inline-block;
 		background: transparent;
